# api-data

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  linter-requirements.in  linter-requirements.txt  pyproject.toml  renovate.json  sonar-project.properties
apps/elementary/api/: .gcloudignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in
apps/elementary/api/src/: README.md  constants.py  main.py  utils.py
apps/fraud/compliance/api/: Dockerfile  Makefile  README.md  deploy_local.sh  dev-requirements.in  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.in  requirements.txt
apps/fraud/compliance/api/src/: __init__.py  main.py
apps/fraud/compliance/api/src/pcpapillon/: .gitignore
apps/fraud/compliance/api/src/tests/: conftest.py  predict_test.py  preprocess_test.py
apps/recommendation/api/: Dockerfile  Makefile  REFACTORING_SUMMARY.md  database_flow_diagram.md  deploy_local.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run_tests.sh  similar_offers_database_flow_diagram.md
apps/recommendation/api/api_tests/: config.py  requirements.in  requirements.txt  test_playlist.py  test_similar_offer.py  utils.py
apps/recommendation/api/postman/: api_integration_tests.postman_collection.json  dev.postman_environment.json  production.postman_environment.json  staging.postman_environment.json
apps/recommendation/api/postman/backend/: api_integration_tests_backend.postman_collection.json  dev_backend.postman_environment.json  production_backend.postman_environment.json  staging_backend.postman_environment.json
apps/recommendation/api/postman/internal/: api_integration_tests.postman_collection.json  dev.postman_environment.json  production.postman_environment.json  staging.postman_environment.json
apps/recommendation/api/src/: app.py  main.py
apps/recommendation/api/src/huggy/: __init__.py
apps/recommendation/api/src/huggy/api/: endpoints_refactored_example.py
apps/recommendation/api/src/huggy/crud/: artist.py  iris.py  iris_refactored.py  non_recommendable_offer.py  non_recommendable_offer_refactored.py  offer.py  offer_refactored.py  recommendable_offer.py  recommendable_offer_refactored.py  user.py  user_refactored.py
apps/recommendation/api/src/huggy/database/: base.py  config.py  database.py  query_builder.py  repository.py  session.py  utils.py
apps/recommendation/api/src/huggy/models/: enriched_user.py  iris_france.py  item_ids.py  item_ids_mv.py  non_recommendable_items.py  past_recommended_offers.py  recommendable_offers_raw.py  similar_artist.py  user.py
apps/recommendation/api/src/huggy/schemas/: artist.py  item.py  offer.py  playlist_params.py  recommendable_offer.py  user.py  utils.py
apps/recommendation/api/src/huggy/services/: container.py  iris_service.py  non_recommendable_offer_service.py  offer_service.py  recommendable_offer_service.py  user_service.py
apps/recommendation/api/src/huggy/utils/: benchmark.py  (+10 more)
apps/recommendation/api/src/scripts/: create_tables.py  seed_db.py
apps/recommendation/api/src/tests/: cold_start_test.py  conftest.py  db_test.py  geolocalisation_test.py  health_check_queries_test.py  mixing_test.py  playlist_params_test.py  user_test.py
apps/recommendation_v2/: .env.remote.template  .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/recommendation_v2/api/src/: main.py
apps/recommendation_v2/locust/: locustfile.py
apps/recommendation_v2/locust/data/: .gitignore
apps/recommendation_v2/postman/: README.md  api_reco_v2.postman_collection.json  api_reco_v2.postman_environment.json
apps/recommendation_v2/src/: main.py
apps/recommendation_v2/src/api/: health_check.py  playlist_recommendation.py  similar_artists.py  similar_offer.py
apps/recommendation_v2/src/config/: settings.py
apps/recommendation_v2/src/connectors/: __init__.py  redis_api.py  vertex_api.py
apps/recommendation_v2/src/controllers/: pipeline_playlist_recommendation.py  pipeline_similar_artists.py  pipeline_similar_offer.py
apps/recommendation_v2/src/core/: diversification.py  geo.py  pipeline.py  ranking.py  retrieval.py  similar_offer.py  tracking.py  user_context.py
apps/recommendation_v2/src/middleware/: gcp_trace.py
apps/recommendation_v2/src/models/: iris.py  items.py  offer.py  past_offer_context.py  similar_artists.py  user.py  venue.py
apps/recommendation_v2/src/schemas/: categories.py  enriched_offer.py  location.py  playlist_recommendation.py  similar_offer.py  tracking_log.py  vertex_prediction_item.py
apps/recommendation_v2/src/services/: db.py  h3.py  logger.py  redis.py  vertex.py
apps/recommendation_v2/src/static/: styles.css
apps/recommendation_v2/src/utils/: benchmark.py  location_presets.py
apps/recommendation_v2/streamlit/: app.py
apps/recommendation_v2/streamlit/components/: card_renderer.py  env_banner.py  request_debug.py  sidebar.py
apps/recommendation_v2/streamlit/pages/: Similar_Artists.py  Similar_Offers.py
apps/recommendation_v2/streamlit/services/: backend_api_client.py  bigquery_client.py  database_service.py
apps/recommendation_v2/streamlit/templates/: artist_card.html  offer_card.html  style.css
apps/recommendation_v2/tests/: conftest.py
apps/recommendation_v2/tests/api/: cache_test.py  database_exception_handler_test.py  playlist_recommendation_test.py  similar_artists_test.py  similar_offer_test.py  token_authentication_test.py
apps/recommendation_v2/tests/connectors/: redis_api_test.py  vertex_api_test.py
apps/recommendation_v2/tests/controllers/: pipeline_playlist_recommendation_test.py  pipeline_similar_artists_test.py  pipeline_similar_offer_test.py
apps/recommendation_v2/tests/core/: geo_test.py  pipeline_test.py  ranking_test.py  retrieval_test.py  tracking_test.py
apps/recommendation_v2/tests/factories/: models.py  schemas.py
apps/recommendation_v2/tests/middleware/: gcp_trace_test.py
apps/recommendation_v2/tests/services/: logger_test.py  redis_test.py  vertex_test.py
apps/recommendation_v2/tests/unit/: tracking_test.py
(+195 files in other folders)
