[project]
name = "elementary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "flask==3.0.3",
    "google-api-python-client==1.12.8",
    "google-cloud-logging==3.5.0",
    "google-cloud-secret-manager==2.2.0",
    "google-cloud-storage==2.9.0",
    "gunicorn==20.0.4",
    "uvicorn==0.22.0",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
