[project]
name = "elementary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flask~=3.0",
    "google-api-python-client~=1.12",
    "google-cloud-logging~=3.5",
    "google-cloud-secret-manager~=2.2",
    "google-cloud-storage~=2.9",
    "gunicorn~=22.0",
    "uvicorn~=0.22",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
