[project]
name = "recommandation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiocache==0.12.2",
    "asyncpg==0.28.0",
    "fastapi>=0.115.5",
    "fastapi-cloud-logging==1.1.0",
    "fastapi-versioning==0.10.0",
    "geoalchemy2==0.14.0",
    "google-cloud-aiplatform==1.31.0",
    "google-cloud-secret-manager==2.24.0",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "httpx==0.27.0",
    "loguru==0.7.0",
    "numpy==1.26.0",
    "pandas==2.2.2",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2023.3",
    "sqlalchemy==2.0.22",
    "starlette==0.49.1",
    "uvicorn==0.22.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest-asyncio==0.23.7",
    "pytest-cov==2.10.1",
    "pytest-postgresql==6.0.0",
]

## ruff
[tool.ruff]
target-version = 'py312'

lint.select = ["E4", "E7", "E9", "F", "I"]
# TARGET : lint.select = [
#     "E",      # pycodestyle
#     "W",      # pycodestyle
#     "F",      # Pyflakes
#     "B",      # flake8-bugbear
#     "C4",     # flake8-comprehensions
#     "I",      # isort
#     "SIM",    # flake8-simplify
#     "TCH",    # flake8-type-checking
#     "TID",    # flake8-tidy-imports
#     "UP",     # pyupgrade
#     "PT",     # flake8-pytest-style
#     "RUF",    # Ruff-specific rules
#     "FBT001", # flake8-boolean-trap
# ]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
