[project]
name = "api-compliance"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anyio~=4.4.0",
    "apscheduler~=3.10.4",
    "catboost~=1.2.5",
    "cloudpickle~=3.0.0",
    "fastapi~=0.115.5",
    "fastapi-cloud-logging~=1.1.0",
    "fastapi-versioning~=0.10.0",
    "google-api-python-client~=2.176.0",
    "google-cloud-logging~=3.12.1",
    "google-cloud-secret-manager~=2.24.0",
    "google-cloud-storage~=2.18.0",
    "gunicorn~=23.0.0",
    "langchain~=0.3.23",
    "langchain-anthropic~=0.3.14",
    "langchain-community~=0.3.21",
    "langchain-google-vertexai~=2.0.24",
    "langchain-huggingface~=0.2.0",
    "langchain-mistralai~=0.2.10",
    "langchain-openai~=0.3.18",
    "langgraph~=0.4.7",
    "loguru~=0.7.0",
    "mlflow~=3.1.4",
    "nltk~=3.9.1",
    "numpy>=2.3.5,<2.4.0",
    "oauth2client~=4.1.3",
    "openai~=1.82.1",
    "pandas~=2.2.0",
    "python-multipart~=0.0.17",
    "torch==2.9.1+cpu; platform_system == 'linux'",
    "torch==2.9.1+cpu; platform_system == 'darwin'",
    "scikit-learn~=1.6.1",
    "scipy~=1.12.0",
    "sentence-transformers~=2.7",
    "setuptools~=75.6.0",
    "shap~=0.46.0",
    "starlette~=0.41.3",
    "transformers~=4.49.0",
    "uvicorn~=0.22.0",
    "werkzeug~=3.1.3",
]


[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ruff>=0.4.7",
    "pytest>=8.2.2",
    "ipython>=8.24.0",
    "matplotlib>=3.9.2",
    "psutil>=5.9.8",
    "streamlit>=1.45.1",
]


[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
default = true



## ruff
[tool.ruff]
target-version = 'py310'

lint.select = ["E4", "E7", "E9", "F", "I"]
# TARGET : lint.select = [
#     "E",      # pycodestyle
#     "W",      # pycodestyle
#     "F",      # Pyflakes
#     "B",      # flake8-bugbear
#     "C4",     # flake8-comprehensions
#     "I",      # isort
#     "SIM",    # flake8-simplify
#     "TCH",    # flake8-type-checking
#     "TID",    # flake8-tidy-imports
#     "UP",     # pyupgrade
#     "PT",     # flake8-pytest-style
#     "RUF",    # Ruff-specific rules
#     "FBT001", # flake8-boolean-trap
# ]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
